# verified-buddy-allocator

./: Cargo.toml  README.md
src/: bits.rs  collections.rs  lib.rs
